// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`\`render: "checklist"\` draws a plan as a plan, not as raw JSON 1`] = `
"                                                                            
  ⌘ todo · items=[{"text":"read the spec","state":"done"…  (1/3) ▾          
    [x] read the spec                                                       
    [~] write the tool                                                      
    [ ] ship it                                                             
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`\`render: "markdown"\` renders the body through the markdown primitive 1`] = `
"                                                                            
  ⌘ brief · # Plan  (3 lines) ▾                                             
    Plan                                                                    
                                                                            
    Do the thing, carefully.                                                
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`the panel strip projects the latest call of a \`panel: true\` tool, folded by default 1`] = `
"  ⌘ todo · items=[{"text":"read the spec","state":"done"…  (1/3) ▸          
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`user and assistant turns 1`] = `
"                                                                            
▎ make emit budgets configurable                                            
                                                                            
● Reading emit.zig first.                                                   
                                                                            
                                                                            
▎ and write it to default.toml · queued                                     
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a skill echo folds back to the \`/name args\` that was typed 1`] = `
"                                                                            
  › /guide how do extensions work · 3 lines  (skill) ▸                      
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`thinking is hidden by default, and \`collapsed\` brings the card back 1`] = `
"                                                                            
  ⋯ thinking  (17 chars) ▸                                                  
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`shell output is collapsed, with an exit chip 1`] = `
"                                                                            
  $ zig build test  (4 lines · exit 1) ▸                                    
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`an extension tool call carries the ⌘ glyph and an argument digest 1`] = `
"                                                                            
  ⌘ lint_zig · src/emit.zig  (1 line) ▸                                     
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a \`nulya …\` command reads as an evolution action 1`] = `
"                                                                            
  ⚙ ext build · lint → v-3f2a91 ▸                                           
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`every evolution action in §5.2 has its own head line 1`] = `
"                                                                            
  ⌕ read kernel · emit.zig  (2 lines) ▸                                     
                                                                            
  ⚙ ext init · lint → .nulya/extensions/lint ▸                              
                                                                            
  ⚙ ext build · lint → v-3f2a91 ▸                                           
                                                                            
  ⚡ activate · lint@v-3f2a91 ▸                                             
                                                                            
  ⚡ activate · lint@v-0011aa ▸                                             
                                                                            
  ⌘ ext run · lint/lint_zig ▸                                               
                                                                            
  ☰ skill · evolution/zig-style ▸                                          
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a sub-session names the session it drives 1`] = `
"                                                                            
  ⤷ sub-session · s-1786815442964-8462dd ▸                                  
                                                                            
  ⤷ sub-session step · s-1786815442964-8462dd ▸                             
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a run of successful calls becomes one line, and a failure stays out of it 1`] = `
"                                                                            
● Reading emit.zig first.                                                   
                                                                            
  ● Run 2 commands ▸                                                        
                                                                            
  $ cat missing  (2 lines · exit 1) ▸                                       
                                                                            
  ● Run 2 commands ▸                                                        
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`the composition card is two lines at rest: what this session is, and what it carries 1`] = `
"                                                                            
▎ session · 2026-08-16 14:02 · frozen composition                          ▸
▎ model    anthropic/claude-sonnet-5 · tools 1+1 · skills 1 · prompts 1     
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`opened, the composition card shows what this session froze 1`] = `
"                                                                            
▎ session · 2026-08-16 14:02 · frozen composition                          ▾
▎ model    anthropic/claude-sonnet-5 · api.anthropic.com                    
▎ tools    shell ⚡lint_zig                                                 
▎ skills   zig-style                                                        
▎ prompts  evolution                                                        
▎ ext      lint@v-3f2a91                                                    
▎ parent   s-1786800870313-bf37ef:41                                        
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`std edit plugin renders its diff expanded by default 1`] = `
"  ⌘ edit · src/emit.zig  (+2 -1) ▾                                          
     1 - pub const head_bytes = 4096;                                       
     1 + pub const head_bytes = 4096; // default                            
     2 + pub const tail_bytes = 2048;                                       
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a driver failure is written out in the transcript, in full, wrapped 1`] = `
"                                                                            
▎ make emit budgets configurable                                            
                                                                            
● Reading emit.zig first.                                                   
                                                                            
✗ model request failed (Transport); retry 1/5 in 1s                         
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a long failure wraps rather than being cut 1`] = `
"                                                            
▎ make emit budgets configurable                            
                                                            
✗ step exited 1: nulya: session new refused: profile        
  \`codex\` names provider codex but no credential resolved   
  (~/.codex/auth.json)                                      
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`a canceled call is recognised by its marker, not by any stream line 1`] = `
"                                                                            
  ⊘ sleep 60  (canceled · side effects unknown)                             
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`each cancellation marker says something different about the world 1`] = `
"                                                                                    
  ⊘ sleep 60  (canceled · side effects unknown)                                     
                                                                                    
  ⊘ zig build  (canceled · completed but unrecorded)                                
                                                                                    
  ⊘ zig build test  (canceled · not executed)                                       
                                                                                    
  ⊘ rm -rf tmp  (interrupted · results unrecorded)                                  
                                                                                    
                                                                                    
                                                                                    
                                                                                    
"
`;

exports[`a spilled result points at its file 1`] = `
"                                                                            
  $ rg -n fn src  (2 lines) ▸                                               
    full output → .nulya/scratch/spill-9.txt                                
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a background call names its task and how long it has been running 1`] = `
"                                                                            
  $ zig build test  (background s-1/t3 · running 12s) ▸                     
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`once the report lands, the call that started it says how it ended 1`] = `
"                                                                            
  $ zig build test  (background s-1/t4 · exit 1 · 41.8s) ▸                  
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`a finished task is its own card: the command, the tail, the log 1`] = `
"                                                                            
  $ zig build test  (background s-1/t3 · exit 1 · 41.8s) ▸                  
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;

exports[`capability notes name activation, availability and version changes 1`] = `
"                                                                                                
  ⚡ extension activated · lint@v-3f2a91                                                        
    tool   lint_zig — Lint Zig sources.                                                         
    skill  zig-style — House Zig style.                                                         
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
                                                                                                
"
`;

exports[`ascii mode degrades every glyph 1`] = `
"                                                                            
| make emit budgets configurable                                            
                                                                            
  ! extension activated · lint@v-3f2a91                                     
    tool   lint_zig — Lint Zig sources.                                     
    skill  zig-style — House Zig style.                                     
                                                                            
  + ext build · lint → v-3f2a91 >                                           
                                                                            
  # edit · src/emit.zig  (1 line) >                                         
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
                                                                            
"
`;
